# Shader

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  mesh.h  model.h  scene.h  shader.h
include/GLFW/: glfw3native.h
include/glad/: glad.h
lib/: glfw3.lib
src/: camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp
src/shader/: final_vertex_shader.glsl
